--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "asmsimulator",
-  "version": "0.5.1",
+  "version": "0.0.1",
   "description": "Simple 8-bit Assembler Simulator in Javascript",
-  "author": "Marco Schweighauser",
+  "author": "Rajdeep Das",
   "license": "MIT",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-jshint": "~0.7.0",
-    "grunt-contrib-uglify": "~0.2.4",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "^1.1.0"
   }
 }
